# dependabot_test

.github/: dependabot.yml
apps/cucu/githubbot/: package.json  tsconfig.json
apps/forpip/: requirements.txt  requirements3.lock.txt
apps/npm1/: .eslintrc.json  build_smoke_test.js  package.json
apps/switchb/: package.json
other/prettier/: package.json
some_rust/rust1/: Cargo.toml
some_rust/rust1/ann/: Cargo.toml
some_rust/rust1/common/: Cargo.toml
some_rust/rust1/core/: Cargo.toml
some_rust/rust1/gcp/: Cargo.toml
some_rust/rust1/tantivy/: Cargo.toml
some_rust/rust2/: Cargo.toml
some_rust/rust2/rust2_core/: Cargo.toml
some_rust/rust2/rust2_grpc/: Cargo.toml
some_rust/rust2/rust2_http/: Cargo.toml
some_rust/rust2/rust2_processor/: Cargo.toml
some_rust/rust2/rust2_py/: Cargo.toml
test1/test2/test3/: requirements.txt
test1/testx/: requirements.txt
