[package]
name = "rust1_common"
version = "0.0.0"
edition = "2021"

[dependencies]
backoff = "=0.4.0"
dyn-clone = "=1.0.5"
eyre = "=0.6.7"
headers = "=0.3.7"
http = "=0.2.6"
isocountry = "=0.3.2"
reqwest = { version = "=0.11.10", features = ["json", "rustls-tls-native-roots"], default-features = false }
serde = { version = "=1.0.136", features = ["derive"] }
serde-xml-rs = "=0.5.1"
tokio = { version = "=1.17.0", features = ["macros"] }
tower = "=0.4.12"
tower-layer = "=0.3.1"
