[package]
name = "rust1_gcp"
version = "0.0.0"
edition = "2021"

[dependencies]
async-stream = "=0.3.3"
async-trait = "=0.1.52"
backoff = { version = "=0.4.0", features = ["tokio"] }
base64 = "=0.13.0"
bytes = "=1.1.0"
byte-unit = "=4.0.14"
crc32c = "=0.6.1"
dyn-clone = "=1.0.5"
eyre = "=0.6.7"
futures = "=0.3.21"
google-api-proto = { version = "=1.21.0", features = ["google-bigtable-v2", "google-bigtable-admin-v2"] }
google-authz = { git = "https://github.com/yottabytt/google-authz", rev = "658bdde0842793a5a8cd873784700be4bcbeb2b9" } # TODO: https://etsy.atlassian.net/browse/INDEX-60
headers = "=0.3.7"
http = "=0.2.6"
hyper = { version = "=0.14.18", features = ["full"] }
hyper-rustls = "=0.23.0"
rust1_common = { path = "../common" }
smartstring = "=1.0.0"
tame-gcs = { version = "=0.11.3", features = ["async-multipart"] }
thiserror = "=1.0.30"
time = "=0.3.9"
tokio = "=1.17.0"
tonic = { version = "=0.6.2", features = ["tls", "tls-webpki-roots", "transport"] }
tower = "=0.4.12"
tower-layer = "=0.3.1"
tracing = "=0.1.32"

[dev-dependencies]
tracing-test = "=0.2.1"
uuid = { version = "=0.8.2", features = ["v4"] }
