[package]
name = "rust1_tantivy"
version = "0.0.0"
edition = "2021"

[dependencies]
arc-swap = "=1.5.0"
ahash = "=0.7.6"
byteorder = "=1.4.3"
bytes = "=1.1.0"
dashmap = "=5.2.0"
dyn-clone = "=1.0.5"
eyre = "=0.6.7"
fastvlq = "=1.1.1"
futures = "=0.3.21"
http = "=0.2.6"
rust1_common = { path = "../common" }
rust1_gcp = { path = "../gcp" }
owning_ref = "=0.4.1"
rand = "=0.8.5"
roaring = "=0.9.0"
serde = "=1.0.136"
serde_json = "=1.0.79"
stable_deref_trait = "=1.2.0"
tantivy = { git = "https://github.com/quickwit-inc/tantivy", rev = "46d5de920dd1ac86fa7a74baa0debd933bcb6574", default-features = false }
tokio = { version = "=1.17.0", features = ["full"] }
tracing = "=0.1.32"
