[package]
name = "rust2_grpc"
version = "0.0.0"
edition = "2021"

[[bin]]
name = "rust2-grpc-serve"
path = "src/bin/serve.rs"

[[bin]]
name = "test-rp3b"
path = "src/test_clients/rp3b.rs"

[[bin]]
name = "test-rwr"
path = "src/test_clients/rwr.rs"

[[bin]]
name = "test-neighbors"
path = "src/test_clients/neighbors.rs"

[[bin]]
name = "test-instant-embedding"
path = "src/test_clients/instant_embedding.rs"

[dependencies]
tokio = { version = "1.12.0", features = ["full"] }
log = "0.4.14"
once_cell = "=1.10.0"
prometheus_exporter = "0.8.4"
prost = "0.9.0"
tonic = "0.6.1"
tonic-reflection = "0.3.0"
tonic-health = "0.5.0"
clap = "2.33.3"
hashbrown = { version = "0.11.2", features = ["rayon"] }

[dependencies.rust2_core]
path = "../rust2_core"

[build-dependencies]
prost-build = "0.9.0"
tonic-build = "0.6.0"
