[package]
name = "rust2_processor"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.rust2_core]
path = "../rust2_core"

[dependencies]
rayon = "1.5.1"
indicatif = "0.16.2"
itertools = "0.10.1"
serde = { version = "1.0.130", features = ["rc", "derive"] }
serde_json = "1.0.71"
log = "0.4.14"
clap = "2.33.3"
fast-float = "0.2.0"
rand_xorshift = "0.3.0"
rand_distr = "0.4.0"
hashbrown = { version = "0.11.2", features = ["rayon"] }
core_affinity = "0.5"
num_cpus = "1.13.1"

[dependencies.rand]
version = "0.8.0"
features = ["alloc"]

[lib]
name = "rust2_processor"
src = "src/lib.rs"
bench = false

[dev-dependencies]
criterion = "0.3.5"
tempfile = "3.2.0"

[[bin]]
name = "rust2-processor"
path = "src/bin/processor.rs"
bench = false

[[bin]]
name = "rust2-optimize-graph"
path = "src/bin/optimize_graph.rs"
bench = false

[[bin]]
name = "rust2-mc-optimize-graph"
path = "src/bin/mc_optimize_graph.rs"
bench = false
